Fixed header image spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,7 +5,7 @@
 	display: block;
 	width:100%;
 	margin:0;
-	padding:0 0 1rem;	
+	padding:0.938rem 0;
 	text-align: center;
 	background: black;
 	img{
